--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,9 @@ eggs/
 .eggs/
 lib/
 lib64/
+# Exception: track frontend shared lib (root lib/ is for Python venv)
+!/frontend/src/shared/lib/
+!/frontend/src/shared/lib/**
 parts/
 sdist/
 var/
